feature added: list branches
